lr/src/build/snapshots/lr__build__ffn__tests__ffn_simple.snap
---
source: lr/src/build/ffn.rs
expression: ffn
---
Ffn {
    first: {
        NonterminalId(
            1,
        ): {
            1,
        },
        NonterminalId(
            2,
        ): {
            0,
            1,
        },
        NonterminalId(
            0,
        ): {
            0,
            1,
            2,
        },
    },
    follow: {
        NonterminalId(
            0,
        ): {},
        NonterminalId(
            1,
        ): {
            0,
            1,
            2,
        },
        NonterminalId(
            2,
        ): {
            0,
            1,
            2,
        },
    },
    nullable: {
        1,
        2,
    },
}
